
Change Log Update (00.00.49)
* 2016-10-11
+ Updated workspace, moved project files to separate win32 folder, Linux and BSD etc..
  will each have their own project folder for building the application to keep things
  cleaner.

Change Log Update (00.00.48)
* 2016-09-20
+ More work on Sign-up and saving user data.
+ Narrowed down saving Birth date and Call Dates to the database in UTC Unix epoch.
+ Need to test some on applying different times differences.  Local time works good
  Good for system, but each user will select and have their own local time represented.
+ Also added Invalid Email prompt when the email entered already exists.

Change Log Update (00.00.47)
* 2016-09-17
+ Worked more on the sign-up process,  Now saving user record and security record
  to the Sqlite database.  Still need a little work on the dates and best way
  to store and retrieve UTC date and times.
+ Also cleaned up the mod_signup code some and optimized the displayPrompts

Change Log Update (00.00.46)
* 2016-09-04
+ More work on the signup process.  Most of the questions are all set.
  Still small things for validation, some stuff for detection needed for backspace
  and then the final verify and save.  After that can start on the logon process.

Change Log Update (00.00.45)
* 2016-08-22
+ Added Several Updates and Fixes for Linux/OSX Terminals
+ Corrected Telnet Options for Echoing back and removing line mode
+ Removed check for duplicate options, so we can call more then one
  and expect just as many replies without endless loops.  Tested Good.
+ Added Clear Screen and home cursor for initial screen positions to match
  the local screen buffer.
+ For ansi screens in windows, replaced \n with \r\n on parsing ansi files.
  (Should also add detection if just \r or replace with \r\n also.
+ WIP need to add screen size change detection, if the screen size changes 
  we need to redraw the screen but also resize the local screen buffer to match